syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

message Events {
    repeated OwnershipTransferred ownership_transferreds = 1;
    repeated Upgrade upgrades = 2;
}

message OwnershipTransferred {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes previous_owner = 5;
    bytes new_owner = 6;
}

message Upgrade {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
}
